--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -24,6 +24,8 @@ framework:
             Symfony\Component\Mailer\Messenger\SendEmailMessage: async
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
+            App\Message\GetSingleConferenceQuery: sync
+            App\Message\MatchVolunteerMessage: async
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
