Messenger on second base

--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -10,7 +10,7 @@ framework:
                 retry_strategy:
                     max_retries: 3
                     multiplier: 2
-            failed: 'doctrine://default?queue_name=failed'
+            failed: 'doctrine://messenger?queue_name=failed'
             sync: 'sync://'
 
         failure_transport: failed
