--- a/.env
+++ b/.env
@@ -41,4 +41,4 @@ MESSENGER_TRANSPORT_DSN=doctrine://messenger?auto_setup=0
 MAILER_DSN=null://null
 ###< symfony/mailer ###
 
-CONF_API_KEY=
+CONF_API_KEY="zcRmw9ZWDwtq5N5RQMhgJEdpBP+2aQB/IR2oN5IJ3JYaLqHbaQh41yeC"
