--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,6 +20,10 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+#    App\Security\Voter\AdminVoter:
+#        autoconfigure: false
+#        tags:
+#            - { name: security.voter, priority: 300 }
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
