--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -49,8 +49,8 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/(event|project)/new, roles: [ROLE_ORGANIZER, ROLE_WEBSITE] }
-        - { path: ^/(event|project), roles: IS_AUTHENTICATED }
+        - { path: ^/conference/new, roles: [ROLE_ORGANIZER, ROLE_WEBSITE] }
+        - { path: ^/conference, roles: IS_AUTHENTICATED }
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
 
