--- a/config/packages/cache.yaml
+++ b/config/packages/cache.yaml
@@ -1,5 +1,7 @@
 framework:
     cache:
+        pools:
+            app.external_api: ~
         # Unique name of your app: used to compute stable namespaces for cache keys.
         #prefix_seed: your_vendor_name/app_name
 
