--- a/.env
+++ b/.env
@@ -42,3 +42,5 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 CONF_API_KEY="zcRmw9ZWDwtq5N5RQMhgJEdpBP+2aQB/IR2oN5IJ3JYaLqHbaQh41yeC"
+DEFAULT_SEARCH="database"
+APP_MAINTENANCE=0
