--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -41,7 +41,7 @@ framework:
             Symfony\Component\Notifier\Message\ChatMessage: async
             Symfony\Component\Notifier\Message\SmsMessage: async
             App\Messenger\Message\GetSingleConferenceQuery: sync
-            App\Messenger\Message\MatchVolunteerMessage: async
+            Tiriel\MatchingBundle\Messenger\Message\MatchVolunteerMessage: async
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
